web-infras/parser/tests/fixtures/babel/core/uncategorised/498/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,49)
1|function hello() { 'use strict'; function inner(arguments) {} }
 |                                               ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,49)
1|function hello() { 'use strict'; function inner(arguments) {} }
 |                                               ^
